k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devpulse-backend-svc
spec:
  selector:
    app: devpulse-backend
  ports:
    - port: 5000
      targetPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: devpulse-frontend-svc
spec:
  selector:
    app: devpulse-frontend
  ports:
    - port: 80
      targetPort: 5173
