k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devpulse-ingress
spec:
  rules:
    - host: devpulse.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: devpulse-frontend-svc
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: devpulse-backend-svc
                port:
                  number: 5000
